<resources>
    <string name="app_name">DeliBuddy</string>

    <string name="permission_location"><font color="#000000">위치</font>
        <font color="#F15641">(필수)</font></string>

    <string name="permission_foreground"><font color="#000000">포그라운드 서비스</font>
        <font color="#F15641">(필수)</font></string>

    <string name="navigation_home">Home</string>
    <string name="navigation_myparty">My Party</string>
    <string name="navigation_alarm">Alarm</string>
    <string name="navigation_mypage">My Page</string>

    <string name="party_scheduled_time">주문 예정</string>
    <string name="party_status_onorder">주문중</string>

    <string name="navigation_alarm_title">알림</string>

    <string name="navigation_myparty_title">내가 참여 중인 파티</string>

    <string name="navigation_mypage_title">마이페이지</string>
    <string name="navigation_mypage_service">서비스 이용 약관</string>
    <string name="navigation_mypage_license">라이센스</string>
    <string name="navigation_mypage_banner_title">버디와 함께 한 식사 횟수</string>
    <string name="navigation_mypage_count">%d번</string>

    <string name="login_info">효율적인 음식 배달,\n지금 바로 딜리버디로\n시작해볼까요?</string>
    <string name="kakao_login">카카오로 시작하기</string>
    <string name="policy_info">가입을 진행할 경우, 아래의 정책에 동의한 것으로 간주됩니다.</string>
    <string name="policy_info_terms_of_service"><u>서비스 이용 약관</u></string>
    <string name="policy_info_or">및</string>
    <string name="policy_info_privacy_policy"><u>개인정보 처리 방침</u></string>

    <string name="parties_empty_title">근처 파티가 존재하지 않아요 :’(</string>
    <string name="parties_empty_sub">파티를 직접 만들어서\n근처 버디들과 음식을 나눠보세요!</string>
    <string name="parties_empty_button">파티 추가</string>

    <string name="home_back_button_once_toast">한 번 더 누르면 종료됩니다.</string>
    <string name="home_back_button_twice_toast">앱이 종료됩니다.</string>

    <string name="address_change_success">주소 변경에 성공하였습니다.</string>
    <string name="address_change_fail">주소 변경에 실패하였습니다.\n다시 시도해 주세요.</string>
    <string name="address_call_fail">주소를 불러오는 데 실패했습니다.\n주소를 다시 설정해주세요.</string>
</resources>
