<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_icon_home"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/myparty"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_icon_myparty"
        android:title="@string/navigation_myparty" />
    <item
        android:id="@+id/alarm"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_icon_alarm"
        android:title="@string/navigation_alarm" />
    <item
        android:id="@+id/mypage"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_icon_mypage"
        android:title="@string/navigation_mypage" />
</menu>