<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_logo"
            android:layout_width="36dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_splash_logo"
            android:tint="@color/main_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_login_info"
            style="@style/RobotoBold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_kakao_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:src="@drawable/image_kakao_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login_info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_policy_info"
            style="@style/RobotoRegular11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/policy_info"
            android:textColor="@color/text_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_kakao_login" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_policy_info">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/policy_info_terms_of_service"
                style="@style/RobotoRegular11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy_info_terms_of_service"
                android:textColor="@color/text_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegular11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/policy_info_or"
                android:textColor="@color/text_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/policy_info_privacy_policy"
                style="@style/RobotoRegular11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy_info_privacy_policy"
                android:textColor="@color/text_grey" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>