<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="4dp"
    android:orientation="vertical"
    android:paddingVertical="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/RobotoBold24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/navigation_mypage_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"
                android:background="@color/sub_yellow"
                android:scaleType="centerInside"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoBold16"
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="홍길동" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:src="@drawable/icon_location"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegular14"
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/location_icon"
                app:layout_constraintStart_toEndOf="@+id/location_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/location_icon"
                tools:text="용인 수지구 성북동" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/delibuddy_mypage_banner_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegular14"
                android:id="@+id/tv_banner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_burgundy"
                app:layout_constraintTop_toTopOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="버디와 함께 한 식사 횟수 24번" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="27dp"
            android:background="@color/divider_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/RobotoRegular14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="14dp"
            android:text="@string/navigation_mypage_service"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/RobotoRegular14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="14dp"
            android:text="@string/navigation_mypage_license"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_grey" />

    </LinearLayout>

</LinearLayout>
